--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -222,9 +222,9 @@ li {
   text-align: center;
   position: relative;
   font-weight: lighter;
-  color: #ccc;
+  color: #0c0c0c;
   /* font-family: Menlo,monospace,sans-serif; */
-  font-size: 80%;
+  /*font-size: 80%;*/
 }
 
 #contact-info a {
